@@ -1,5 +1,6 @@
 Development
     - Added Quantum Fourier transform example in "examples/qft.cpp"
+    - Added a suite of stress tests in "stress_tests" (only for POSIX systems)
 Version 1.0 - 3 July 2018
     - Added full support for reversible classical circuits, added
       "classes/reversible.h" header file that contains the following classes:
